Botones web funcionales

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "python.pythonPath": "C:\\Users\\Equipo\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
-  "python.linting.pylintEnabled": false
+  "python.linting.pylintEnabled": false,
+  "arduino.path": "/home/manuel/Descargas/arduino-1.8.7/",
+  "arduino.enableUSBDetection": true
 }
